fix small alignment issue

--- a/src/shared/components/Workspace/SideMenu.less
+++ b/src/shared/components/Workspace/SideMenu.less
@@ -4,4 +4,12 @@
   right: 0;
   top: 38px;
   max-width: 300px;
+
+  .header {
+    margin: 2px 0;
+  }
+  .ant-drawer-close {
+    line-height: 43px;
+    height: 43px;
+  }
 }
